# eat-money

./: .gitignore  CONTRIBUTIONS.md  CalorieNinja.py  FoodItem.py  LICENSE.txt  MANIFEST.in  README.md  data.csv  food.py  main.py  preferences.json  pyproject.toml  requirements.txt
src/eat-money/: __main__.py  data.csv  main.py
src/eat_money/: CONTRIBUTIONS.md  CalorieNinja.py  LICENSE.txt  README.md  __main__.py  data.csv  data.db  food.py  main.py  preferences.json  text_helper.py
src/eat_money.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
