[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eat_money"
version = "0.3.5"
description = "Calorie/Spending tracker"
dependencies = ["requests",
                "Kivy",
                "KivyMD"
]
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["eat_money*"]
exclude = ["eat_money.tests*"]
namespaces = false

[project.scripts]
eat-money = "eat_money.main:main"